--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,6 +12,7 @@ pydantic==1.9.1
 pydub==0.25.1
 python-dotenv==0.20.0
 python-multipart==0.0.5
+rarfile==4.0
 requests==2.28.1
 six==1.16.0
 sniffio==1.2.0
@@ -19,6 +20,7 @@ srt==3.5.2
 starlette==0.19.1
 tqdm==4.64.0
 typing_extensions==4.3.0
+unrar==0.4
 urllib3==1.26.11
 uvicorn==0.18.2
 vosk==0.3.42
